Bug 962920 nsTextStore should commit composition when WM_ENTERIDLE is received r=jimm